name:                kippt-to-pinboard
version:             0.1.0.0
synopsis:            Send kippt's bookmarks to pinboard.
-- description:
license:             MIT
license-file:        LICENSE
author:              Masashi Fujita
maintainer:          objectxtreme@gmail.com
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable kippt-to-pinboard
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , bytestring
                     , containers
                     , text
                     , optparse-applicative
                     , filepath
                     , aeson
                     , lens
                     , wreq
                     , http-client
                     , http-client-tls
                     , pipes
                     , pipes-aeson
                     , pipes-bytestring
                     , pipes-parse
                     , unix-time
                     , data-default-class
